--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -1,5 +1,6 @@
 .header {
     display: flex;
+    justify-content: space-between;
     align-items: center;
     margin: 45px auto 0;
     border-bottom: 1px solid rgba(84, 84, 84, 0.7);
