--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,9 @@
 @import url(./blocks/page/page.css);
 @import url(./blocks/header/header.css);
 @import url(./blocks/header/__logo/header__logo.css);
+@import url(./blocks/header/__link/header__link.css);
+@import url(./blocks/header/__user-info/header__user-info.css);
+@import url(./blocks/header/__email/header__email.css);
 @import url(./blocks/profile/profile.css);
 @import url(./blocks/profile/__avatar/profile__avatar.css);
 @import url(./blocks/profile/__avatar-image/profile__avatar-image.css);
@@ -42,6 +45,15 @@
 @import url(./blocks/image-popup/__image/image-popup__image.css);
 @import url(./blocks/image-popup/__caption/image-popup__caption.css);
 @import url(./blocks/popup/__delete-button/popup__delete-button.css);
+@import url(./blocks/sign/sign.css);
+@import url(./blocks/sign/__title/sign__title.css);
+@import url(./blocks/sign/__form/sign__form.css);
+@import url(./blocks/sign/__field/sign__field.css);
+@import url(./blocks/sign/__input/sign__input.css);
+@import url(./blocks/sign/__submit/sign__submit.css);
+@import url(./blocks/sign/__redirect/sign__redirect.css);
+@import url(./blocks/popup-info-tooltip/__image/popup-info-tooltip__image.css);
+@import url(./blocks/popup-info-tooltip/__text/popup-info-tooltip__text.css);
 
 body {
   background-color: black;
