--- a/src/blocks/sign/__redirect/sign__redirect.css
+++ b/src/blocks/sign/__redirect/sign__redirect.css
@@ -7,7 +7,7 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    cursor: pointer;
+    text-decoration: none;
     transition: opacity 0.2s linear;
 }
 
